# elm-slides

./: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  Main.elm  Message.elm  README.md  Slides.elm  docker-compose.yml  elm-package.json  index.html  index.js  init.sh  main.css  package-lock.json  package.json  routes.json  webpack.config.js
api/: Dockerfile  init.sql
db/: db.json
elm-stuff/: exact-dependencies.json
elm-stuff/build-artifacts/0.18.0/NAlexPear/elm-slides/1.0.0/: Components.elmi  Components.elmo  Helpers.elmi  Helpers.elmo  Initiators.elmi  Initiators.elmo  Main.elmi  Main.elmo  Message.elmi  Message.elmo  Navigators.elmi  Navigators.elmo  Ports.elmi  Ports.elmo  Renderers.elmi  Renderers.elmo  Requests.elmi  Requests.elmo  Slides.elmi  Slides.elmo  Types.elmi  (+7 more)
proxy/: nginx.conf
scripts/: await-modules.sh
services/api/: postgrest.conf
services/app/: Dockerfile
services/db/: init.sql
services/proxy/: nginx.conf
src/: Components.elm  Message.elm  Types.elm  Update.elm  View.elm
src/api/: Cargo.toml
src/api/lib/: db.rs
src/api/src/: db.rs  main.rs
src/frontend/: Main.elm  elm-package.json  index.ejs  index.js  main.css  package-lock.json  package.json
src/frontend/elm-stuff/: exact-dependencies.json
src/frontend/src/: Message.elm  Ports.elm  Types.elm  Update.elm  View.elm
src/frontend/src/helpers/: Decoders.elm  Encoders.elm  Navigators.elm  Requests.elm  Updaters.elm
src/helpers/: Decoders.elm  Encoders.elm  Initiators.elm  Navigators.elm  Renderers.elm  Requests.elm  Updaters.elm
src/highlight/: highlight.pack.js
(+17 files in other folders)
