[package]
name = "elm-slides-api"
version = "0.1.0"
authors = ["Alex Pearson <alex@alexpear.com>"]

[[bin]]
name = "elm-slides-api"
path = "src/api/src/main.rs"

[dependencies]
postgres = "0.15"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.5"
default-features = false
features = ["json"]
