[package]
name = "elm-slides-api"
version = "0.1.0"
authors = ["Alex Pearson <alex@alexpear.com>"]

[dependencies]
postgres = "0.15"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.5"
default-features = false
features = ["json"]
